kubernetes/apps/postgres/cluster/app/service.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
---
apiVersion: v1
kind: Service
metadata:
  name: &app postgres
  namespace: postgres
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: postgres.${SECRET_DOMAIN}
    lbipam.cilium.io/ips: 192.168.1.244
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/poolerName: postgres-db-pooler-rw
